# marley

./: .gitignore  .travis.yml  40K_lines.txt  BackshiftedFermiGasModel.cc  CITATION.bib  CMakeLists.txt  CNAME  ConfigFile.cc  ConfigFile.hh  DecayChannel.cc  DecayChannel.hh  Doxyfile  ElectronReaction.cc  ElectronReaction.hh  Event.hh  FILEMAP  Fragment.hh  GUIDELINES  Gamma.hh  Generator.cc  Generator.hh  HFTable.hh  Integrator.cc  InterpolationGrid.hh  LICENSE  Level.hh  Makefile  MassTable.cc  MassTable.hh  NeutrinoSource.cc  NeutrinoSource.hh  NuclearPhysics.cc  NuclearPhysics.hh  NuclearReaction.hh  Particle.hh  README  README.md  README.rst  Reaction.hh  SphericalOpticalModel.cc  (+333 more)
_static/: example.hepevt  example.json
data/: gs_spin_parity_table.txt  mass_table.js
data/react/: CEvNS.react  CEvNS40Ar.react  ES.react  ve40ArCC_Bhattacharya1998.react  ve40ArCC_Bhattacharya2009.react  ve40ArCC_Liu1998.react  veES.react
data/structure/: README.md  TALYS-CITATION.bib  nuclide_index.txt  z017  z018
data/tests/: test.js
docs/: Makefile  citing.rst  conf.py  contact.rst  copyright.rst  dev_docs.rst  external_pubs.bib  getting_started.rst  index.rst  interpret_output.rst  marley_pubs.bib  news.rst  page-1.rst  pubs.rst  requirements.txt
docs/_templates/: layout.html  logo-text.html
docs/doxygen/: Doxyfile  mainpage.dox
docs/news_posts/: cpc_and_others.rst  nu2020.rst  prc40Ar.rst  release_v1_2_0.rst
doxygen/: Doxyfile  _backshifted_fermi_gas_model_8cc_source.html  _backshifted_fermi_gas_model_8hh_source.html  _chebyshev_interpolating_function_8cc_source.html  _chebyshev_interpolating_function_8hh_source.html  _decay_scheme_8cc_source.html  _decay_scheme_8hh_source.html  _electron_reaction_8cc_source.html  _electron_reaction_8hh_source.html  _error_8cc_source.html  _error_8hh_source.html  _event_8cc_source.html  _event_8hh_source.html  _event_file_reader_8cc_source.html  _event_file_reader_8hh_source.html  _event_processor_8hh_source.html  _exit_channel_8cc_source.html  _exit_channel_8hh_source.html  _file_manager_8cc_source.html  _file_manager_8hh_source.html  _fragment_8hh_source.html  _gamma_8cc_source.html  _gamma_8hh_source.html  _gamma_strength_function_model_8cc_source.html  _gamma_strength_function_model_8hh_source.html  _generator_8cc_source.html  _generator_8hh_source.html  _hauser_feshbach_decay_8cc_source.html  _hauser_feshbach_decay_8hh_source.html  _integrator_8cc_source.html  _integrator_8hh_source.html  _interpolation_grid_8hh_source.html  _iterator_to_member_8hh_source.html  _iterator_to_pointer_member_8hh_source.html  _j_s_o_n_8hh_source.html  _j_s_o_n_config_8cc_source.html  _j_s_o_n_config_8hh_source.html  _koning_delaroche_optical_model_8cc_source.html  _koning_delaroche_optical_model_8hh_source.html  _level_8cc_source.html  (+250 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+60 more)
examples/: COPY_ME.js  config.js  config.txt
examples/config/: COPY_ME.js  annotated.js  config.js  minimal.js  simple.js
fermi_function/: Makefile  fermi_function.cc  marley_utils.hh
include/: BackshiftedFermiGasModel.hh  ConfigFile.hh  ConfigurationFile.hh  DecayScheme.hh  Error.hh  Event.hh  ExitChannel.hh  Factory.hh  Fragment.hh  Gamma.hh  GammaStrengthFunctionModel.hh  Generator.hh  HauserFeshbachDecay.hh  Integrator.hh  InterpolationGrid.hh  IteratorToMember.hh  IteratorToPointerMember.hh  Kinematics.hh  KoningDelarocheOpticalModel.hh  Level.hh  LevelDensityModel.hh  Logger.hh  MassTable.hh  NeutrinoSource.hh  NuclearPhysics.hh  NuclearReaction.hh  OpticalModel.hh  Parity.hh  Particle.hh  Reaction.hh  RootConfigFile.hh  RootConfigurationFile.hh  RotationMatrix.hh  SphericalOpticalModel.hh  StandardLorentzianModel.hh  StructureDatabase.hh  WeisskopfSingleParticleModel.hh  iterator_to_member.hh  marley_kinematics.hh  marley_linkdef.hh  (+2 more)
interaction_rate/: Makefile  README  rate_spectra  rate_spectra.cc  rate_spectrum_electron_antineutrino.txt  rate_spectrum_electron_neutrino.txt
news_posts/: cpc_and_others.html  nu2020.html  prc40Ar.html
react/: ve40ArCC_1998.react  ve40ArCC_2009.react  ve40ArCC_Bhattacharya1998.react  ve40ArCC_Bhattacharya2009.react  ve40ArNC.react
search/: all_0.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+70 more)
sn_neutrino_flux/: Makefile  sn_electron_antineutrino_flux.txt  sn_electron_neutrino_flux.txt  sn_neutrino_spectra  sn_neutrino_spectra.cc  sn_other_neutrino_flux.txt
src/: BackshiftedFermiGasModel.cc  ChebyshevInterpolatingFunction.cc  ConfigFile.cc  ConfigurationFile.cc  DecayScheme.cc  ElectronReaction.cc  Error.cc  Event.cc  EventFileReader.cc  ExitChannel.cc  Factory.cc  FileManager.cc  Gamma.cc  GammaStrengthFunctionModel.cc  Generator.cc  HauserFeshbachDecay.cc  Integrator.cc  JSONConfig.cc  Kinematics.cc  KoningDelarocheOpticalModel.cc  Level.cc  Logger.cc  MacroEventFileReader.cc  MassTable.cc  NeutrinoSource.cc  NuclearPhysics.cc  NuclearReaction.cc  NucleusDecayer.cc  OutputFile.cc  OutputFileReader.cc  Parity.cc  Particle.cc  ProjectileDirectionRotator.cc  R5EFR.cc  Reaction.cc  RootConfigFile.cc  RootConfigurationFile.cc  RootEventFileReader.cc  RootJSONConfig.cc  RootOutputFile.cc  (+16 more)
structure/: README.md  z017  z018  z019
testing/: Makefile  README  run  threshold.cc
tests/: sampling.cc  test.js
(+101 files in other folders)
